@@ -1,3 +1,14 @@
+2018-11-29  Zalan Bujtas  <zalan@apple.com>
+
+        [ContentObservation] Make WKSetObservedContentChange logic more explicit.
+        https://bugs.webkit.org/show_bug.cgi?id=192183
+
+        Reviewed by Simon Fraser.
+
+        * platform/ios/wak/WKContentObservation.cpp:
+        (WKSetObservedContentChange):
+        (WebThreadRemoveObservedDOMTimer):
+
 2018-11-29  Youenn Fablet  <youenn@apple.com>
 
         CSS subresource loads should not be observable from resource timing if the stylesheet is opaque
